<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GeotaggerLookAndFeelActivity"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/greybackground">

    <com.hci.geotagger.gui.ListHeaderTextView
        android:id="@+id/application_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20pt"
        android:text="@string/app_name"
        android:layout_marginBottom="36dip" />

    <com.hci.geotagger.gui.GravityBookFontEditText
        android:id="@+id/login_unameTxt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:background="#f3f3f3"
        android:textColor="#000000"
        android:paddingLeft="5dp"
        android:layout_marginTop="30dp" />

    <com.hci.geotagger.gui.GravityBookFontEditText
        android:id="@+id/login_pwTxt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="#f3f3f3"
        android:paddingLeft="5dp"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Register Here"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#000000"
            android:text="|"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#000000"
            android:text="Forgot Password?"
            android:textStyle="bold"

            />

    </LinearLayout>

    <com.hci.geotagger.gui.GravityBookFontButton
        android:id="@+id/login_btnLogin"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="13dp"
        android:textColor="#fff"
        android:background="#13b586"/>



</LinearLayout>