<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/GeotaggerLookAndFeelActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollingCache="false" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/advview_image_height"
            android:scrollingCache="false" >

            <TextView
                android:id="@+id/groupView_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GeotaggerLookAndFeelTextMedium"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/scrollview_topmargin"
                android:ems="10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text="@string/location" />
        </ScrollView>

	<!-- Row of toggle buttons -->
	<TextView style="@style/GeotaggerLookAndFeelDividerHorizontal" />
	<LinearLayout
		android:id="@+id/tab_buttons"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:background="@color/togglebutton_background_color"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:weightSum="3" >
		
		<LinearLayout
	        android:id="@+id/tags_button"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:clickable="true"
	        android:enabled="false"
	        android:orientation="vertical" >
	        <TextView
	            style="@style/GeotaggerLookAndFeelTabButton"
		        android:text="@string/tags_text"
	            />
	        <TextView
	            style="@style/GeotaggerLookAndFeelTabIndicator" />
		</LinearLayout>
	        
	    <TextView style="@style/GeotaggerLookAndFeelTabDivider" />
	    
		<LinearLayout
	        android:id="@+id/members_button"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:clickable="true"
	        android:enabled="false"
	        android:orientation="vertical" >
	        <TextView
	            style="@style/GeotaggerLookAndFeelTabButton"
		        android:text="@string/members_text"
	            />
	        <TextView
	            style="@style/GeotaggerLookAndFeelTabIndicator" />
		</LinearLayout>
		
	    <TextView style="@style/GeotaggerLookAndFeelTabDivider" />
	    
		<LinearLayout
	        android:id="@+id/adventures_button"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:clickable="true"
	        android:enabled="false"
	        android:orientation="vertical" >
	        <TextView
	            style="@style/GeotaggerLookAndFeelTabButton"
		        android:text="@string/adventures_text"
	            />
	        <TextView
	            style="@style/GeotaggerLookAndFeelTabIndicator" />
		</LinearLayout>
			        
	</LinearLayout>
	<TextView style="@style/GeotaggerLookAndFeelDividerHorizontal" />
		
	<FrameLayout
	    android:id="@+id/tagsViewContent"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >	    
	</FrameLayout>
	<FrameLayout
	    android:id="@+id/adventuresViewContent"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >	    
	</FrameLayout>
	<FrameLayout
	    android:id="@+id/membersViewContent"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >	    
	</FrameLayout>
		
    </LinearLayout>

</LinearLayout>